force-app/main/default/objects/Order/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <type>DateTime</type>
</CustomField>