force-app/main/default/objects/Order/fields/Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Creation_Time__c</fullName>
    <label>Creation Time</label>
    <type>Date</type>
</CustomField>