force-app/main/default/objects/Order/fields/In_Store_Order__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Order__c</fullName>
    <label>In Store Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Botiga física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>