force-app/main/default/objects/Order/fields/isOrderthisyear__c.field-meta.xml
<CustomField>
    <fullName>isOrderthisyear__c</fullName>
    <formula>IF( EffectiveDate &gt;=(TODAY()-365), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOrderthisyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>