force-app/main/default/objects/Order/fields/Order_Number_Absis__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Absis__c</fullName>
    <label>Order Number Absis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>