force-app/main/default/objects/Order/fields/Order_Placed_by__c.field-meta.xml
<CustomField>
    <fullName>Order_Placed_by__c</fullName>
    <inlineHelpText>Shows who placed the Order on B2C Commerce.</inlineHelpText>
    <label>Order Placed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>