force-app/main/default/objects/Order/fields/Order_Value_Excluding_VAT__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_Excluding_VAT__c</fullName>
    <label>Order Value Excluding VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>