force-app/main/default/objects/Order/fields/OSF_CC_external_order_id__c.field-meta.xml
<CustomField>
    <fullName>OSF_CC_external_order_id__c</fullName>
    <externalId>true</externalId>
    <label>OSF CC external order id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>