force-app/main/default/objects/Order/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Targeta</fullName>
            </value>
            <value>
                <fullName>Efectiu</fullName>
            </value>
            <value>
                <fullName>Altres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>