force-app/main/default/objects/Order/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z00-Venda immediata</fullName>
            </value>
            <value>
                <fullName>Z01-Encàrrec</fullName>
            </value>
            <value>
                <fullName>Z02-Reserva</fullName>
            </value>
            <value>
                <fullName>Z03-Quota alta soci</fullName>
            </value>
            <value>
                <fullName>Z04-Comanda WEB</fullName>
            </value>
            <value>
                <fullName>Z05-Devolucions diferit</fullName>
            </value>
            <value>
                <fullName>Z06-Campanya Text Ampa</fullName>
            </value>
            <value>
                <fullName>Z07-Campanya Sant Jordi</fullName>
            </value>
            <value>
                <fullName>Z08-Inici de Curs Escoles</fullName>
            </value>
            <value>
                <fullName>Z09-Lots de material</fullName>
            </value>
            <value>
                <fullName>Z10-Distribució Rep. Llibres</fullName>
            </value>
            <value>
                <fullName>Z11-Franquicies Cataleg</fullName>
            </value>
            <value>
                <fullName>Z12-Franquicies Servei Novetats</fullName>
            </value>
            <value>
                <fullName>Z13-Comanda WEB Botiga</fullName>
            </value>
            <value>
                <fullName>Z14-VD_AFEGITS</fullName>
            </value>
            <value>
                <fullName>Z15-VD_INCIDENCIA</fullName>
            </value>
            <value>
                <fullName>Z16-VD-VENDA ANTICIPADA</fullName>
            </value>
            <value>
                <fullName>Z17-Distribució NADAL</fullName>
            </value>
            <value>
                <fullName>Z18-Distribució IMPULS</fullName>
            </value>
            <value>
                <fullName>Z19-Distribució PERMANENT</fullName>
            </value>
            <value>
                <fullName>Z20-Comanda ZWEB Diferit Material Escolar</fullName>
            </value>
            <value>
                <fullName>Z21-Reparacions</fullName>
            </value>
            <value>
                <fullName>Z22-Copies</fullName>
            </value>
            <value>
                <fullName>Z23-Especials Pompeu</fullName>
            </value>
            <value>
                <fullName>Z24-Absis servir client</fullName>
            </value>
            <value>
                <fullName>Z25-Signatures Web a Botiga</fullName>
            </value>
            <value>
                <fullName>Z26-Signatures Web a Domicili</fullName>
            </value>
            <value>
                <fullName>Z27-Signatures Absis a Domicili</fullName>
            </value>
            <value>
                <fullName>Z30-Campanya Text Botiga</fullName>
            </value>
            <value>
                <fullName>Z31-Lots WEB servir Escola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>