force-app/main/default/objects/Order/fields/SFCC_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_Number__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Order Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Order Number.</inlineHelpText>
    <label>Website Order Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>