force-app/main/default/objects/Order/fields/Store_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Store_Delivery__c</fullName>
    <label>Store Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B001_Balmes</fullName>
            </value>
            <value>
                <fullName>B002_Sabadell</fullName>
            </value>
            <value>
                <fullName>B003_Sta_Coloma</fullName>
            </value>
            <value>
                <fullName>B004_Urquinaona</fullName>
            </value>
            <value>
                <fullName>B006_Badalona</fullName>
            </value>
            <value>
                <fullName>B007_RS_SSCC</fullName>
            </value>
            <value>
                <fullName>B008_BAIXA</fullName>
            </value>
            <value>
                <fullName>B010_Sants</fullName>
            </value>
            <value>
                <fullName>B011_Bellaterra_(UAB)</fullName>
            </value>
            <value>
                <fullName>B016_Girona</fullName>
            </value>
            <value>
                <fullName>B017_València_Centre</fullName>
            </value>
            <value>
                <fullName>B018_Baixa</fullName>
            </value>
            <value>
                <fullName>B019_Perú</fullName>
            </value>
            <value>
                <fullName>B020_Pompeu_(UPF)</fullName>
            </value>
            <value>
                <fullName>B021_Lleida</fullName>
            </value>
            <value>
                <fullName>B022_Vic_Universitària</fullName>
            </value>
            <value>
                <fullName>B023_Tarragona</fullName>
            </value>
            <value>
                <fullName>B024_Sant_Andreu</fullName>
            </value>
            <value>
                <fullName>B025_Manresa</fullName>
            </value>
            <value>
                <fullName>B026_Reus</fullName>
            </value>
            <value>
                <fullName>B027_Mataró</fullName>
            </value>
            <value>
                <fullName>B028_Sant_Boi</fullName>
            </value>
            <value>
                <fullName>B029_Vilanova_i_la_Geltrú</fullName>
            </value>
            <value>
                <fullName>B032_Mollet</fullName>
            </value>
            <value>
                <fullName>B033_Igualada</fullName>
            </value>
            <value>
                <fullName>B034_Granollers</fullName>
            </value>
            <value>
                <fullName>B035_Vic</fullName>
            </value>
            <value>
                <fullName>B036_Figueres</fullName>
            </value>
            <value>
                <fullName>B039_L_ILLA</fullName>
            </value>
            <value>
                <fullName>B043_Sant_Cugat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>