force-app/main/default/objects/Order/listViews/B2C_Orders.listView-meta.xml
<ListView>
    <fullName>B2C_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>from_SFCC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>B2C Orders</label>
</ListView>